# tridecimator

./: .gitignore  CMakeLists.txt  README.md  test_build_reduced_meshes.sh
examples/: mvbb_tridecimator.cpp
include/: meshdecimator.h  mvbb_decimator.h
scripts/: reduced_meshes.sh
src/: mvbb_decimator.cpp  mvbb_decimator_all.cpp  mvbb_tridecimator.cpp
